--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ html {
             font-weight: lighter;
             font-size: 50px;
             color: gold;
-            font-family: owner;
+            font-family: cursive ;
             position: absolute;
         }
         .nav-btn {
